set01/problem05_compile_errors.txt
Compilation started at 10/31/2023, 11:41:59 AM
Compilation finished at 10/31/2023, 11:41:59 AM
Compilation started at 10/31/2023, 11:42:42 AM
Compilation finished at 10/31/2023, 11:42:43 AM
Compilation started at 10/31/2023, 11:46:29 AM
Compilation finished at 10/31/2023, 11:46:30 AM
Compilation started at 10/31/2023, 11:46:59 AM
Compilation finished at 10/31/2023, 11:46:59 AM
Compilation started at 10/31/2023, 11:47:20 AM
Compilation finished at 10/31/2023, 11:47:21 AM
Compilation started at 10/31/2023, 11:47:36 AM
Compilation finished at 10/31/2023, 11:47:36 AM
Compilation started at 10/31/2023, 11:49:38 AM
Compilation finished at 10/31/2023, 11:49:38 AM
Compilation started at 10/31/2023, 11:51:00 AM
Compilation finished at 10/31/2023, 11:51:00 AM
Compilation started at 10/31/2023, 11:51:58 AM
Compilation finished at 10/31/2023, 11:51:59 AM
Compilation started at 10/31/2023, 11:55:19 AM
Compilation finished at 10/31/2023, 11:55:19 AM
Compilation started at 10/31/2023, 11:56:24 AM
Compilation finished at 10/31/2023, 11:56:25 AM
Compilation started at 10/31/2023, 12:02:19 PM
Compilation finished at 10/31/2023, 12:02:20 PM
Compilation started at 10/31/2023, 12:03:50 PM
c:\Users\thush\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-tfthushaar\set01\problem05.c: In function 'main':
c:\Users\thush\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-tfthushaar\set01\problem05.c:24:15: error: void value not ignored as it ought to be
     int a,b,c=input();
               ^~~~~
Compilation finished at 10/31/2023, 12:03:50 PM
Compilation started at 10/31/2023, 12:10:08 PM
Compilation finished at 10/31/2023, 12:10:08 PM
